<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/f_roboto_medium"
        android:text="@string/txt_dang_nhap"
        android:textColor="@color/text_color"
        android:textFontWeight="700"
        android:textSize="36sp"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:id="@+id/lv_dang_dang"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded,UselessLeaf">
        <RelativeLayout
            android:id="@+id/cnt_user_name"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/edt_user_name"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/ic_login"
                android:hint="@string/txt_user_name"
                android:paddingLeft="15dp"
                android:textSize="14sp"
                tools:ignore="Autofill,MissingConstraints,RtlHardcoded,RtlSymmetry,TextFields" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginLeft="15dp"
                android:background="@color/white"
                android:fontFamily="@font/f_roboto_medium"
                android:text="@string/txt_tai_khoan"
                android:textColor="@color/text_gray"
                android:textFontWeight="700"
                tools:ignore="RtlHardcoded,UnusedAttribute" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cnt_password"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/ic_login"
                    android:hint="@string/txt_password"
                    android:paddingLeft="15dp"
                    android:textSize="14sp"
                    tools:ignore="Autofill,MissingConstraints,RtlHardcoded,RtlSymmetry,TextFields" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/edt_password"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="7dp"
                    android:src="@drawable/ic_lock"
                    tools:ignore="ContentDescription,RtlHardcoded" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginLeft="15dp"
                android:background="@color/white"
                android:fontFamily="@font/f_roboto_medium"
                android:text="@string/txt_mat_khau"
                android:textColor="@color/text_gray"
                android:textFontWeight="700"
                tools:ignore="RtlHardcoded,UnusedAttribute" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_dang_nhap"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:textSize="14sp"
            android:clickable="true"
            android:text="@string/txt_dang_nhap"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/ic_primary_button"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/f_roboto_medium"
            android:textFontWeight="700"
            android:layout_height="40dp"
            tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute">
        </TextView>

    </LinearLayout>


</LinearLayout>