<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="15dp"
        android:weightSum="3"
        tools:ignore="UselessLeaf,UselessParent">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_menu"
            tools:ignore="ContentDescription" />
        <View
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/f_roboto_medium"
            android:textColor="@color/black"
            android:singleLine="true"
            android:text="@string/txt_danh_sach_sms"
            android:layout_height="17dp"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:src="@drawable/ic_filter"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />
    </TableRow>
    <View
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_height="3dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:orientation="vertical"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="64dp"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/txt_chon"
                    android:clickable="true"
                    android:textColor="@color/white"
                    android:background="@drawable/ic_primary_button"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/f_roboto_medium"
                    android:textFontWeight="700"
                    android:layout_height="40dp"
                    tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="154dp"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/txt_tong_so_sms"
                    android:clickable="true"
                    android:textColor="@color/black"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/f_roboto_medium"
                    android:textFontWeight="500"
                    android:layout_height="40dp"
                    tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute">
                </TextView>

            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                tools:listitem="@layout/item_telephone"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_login">
            </androidx.recyclerview.widget.RecyclerView>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="95dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="Gửi"
                    android:clickable="true"
                    android:textColor="@color/white"
                    android:background="@drawable/ic_primary_button"
                    android:fontFamily="@font/f_roboto_medium"
                    android:textFontWeight="700"
                    android:layout_height="40dp"
                    tools:ignore="HardcodedText,KeyboardInaccessibleWidget,UnusedAttribute">
                </TextView>
                <TextView
                    android:layout_width="95dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="Hủy"
                    android:layout_marginLeft="15dp"
                    android:clickable="true"
                    android:textColor="@color/white"
                    android:background="@drawable/ic_secondary_button"
                    android:fontFamily="@font/f_roboto_medium"
                    android:textFontWeight="700"
                    android:layout_height="40dp"
                    tools:ignore="HardcodedText,KeyboardInaccessibleWidget,RtlHardcoded,UnusedAttribute">
                </TextView>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>