<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded,RtlSymmetry">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            tools:ignore="UselessLeaf,UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@color/gray"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                tools:ignore="UselessParent">

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_circle"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/ic_logo"
                        tools:ignore="ContentDescription" />


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="31dp"
                    android:layout_marginBottom="31dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f_roboto_medium"
                        android:text="@string/txt_ten_dai_dien"
                        android:textColor="@color/begin_color"
                        android:textFontWeight="700"
                        android:textSize="14sp"
                        tools:ignore="UnusedAttribute" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f_roboto_medium"
                        android:text="@string/txt_ten_to_chuc"
                        android:textColor="@color/begin_color"
                        android:textFontWeight="400"
                        android:textSize="14sp"
                        tools:ignore="UnusedAttribute" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_setting"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f_roboto_medium"
                        android:text="@string/txt_danh_sach_trang_thai"
                        android:textColor="@color/black"
                        android:textFontWeight="700"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_line_chart"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f_roboto_medium"
                        android:text="Thống kê"
                        android:textColor="@color/black"
                        android:textFontWeight="700"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText,UnusedAttribute" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_text_box"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f_roboto_medium"
                        android:text="Mẫu tin nhắn"
                        android:textColor="@color/black"
                        android:textFontWeight="700"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText,UnusedAttribute" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_server"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f_roboto_medium"
                        android:text="Thông tin kết nối đến Server"
                        android:textColor="@color/black"
                        android:textFontWeight="700"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText,UnusedAttribute" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_payment_history"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f_roboto_medium"
                        android:text="Lịch sử thanh toán"
                        android:textColor="@color/black"
                        android:textFontWeight="700"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText,UnusedAttribute" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_info"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f_roboto_medium"
                        android:text="Thông tin về MMS"
                        android:textColor="@color/black"
                        android:textFontWeight="700"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText,UnusedAttribute" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_hand"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f_roboto_medium"
                        android:text="Đặt lịch gửi SMS thủ công"
                        android:textColor="@color/black"
                        android:textFontWeight="700"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText,UnusedAttribute" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_sign_out"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/f_roboto_medium"
                        android:text="Đăng xuất"
                        android:textColor="@color/black"
                        android:textFontWeight="700"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText,UnusedAttribute" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>